--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,16 +1,46 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
+ *= require @fortawesome/fontawesome-free/css/all.min
+ *= require bootstrap/dist/css/bootstrap.min
  *= require_tree .
- *= require bootstrap/dist/css/bootstrap
  *= require_self
  */
+
+.home_video {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  object-fit: cover;
+  top: 0;
+  z-index: -10;
+}
+
+.home-video-wrapper {
+  height: 100vh;
+  display: flex;
+}
+
+.centralized-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+  min-height: 200px;
+  background-color: rgba(33, 33, 33, .3);
+  align-items: center;
+  /*background-image: radial-gradient(circle, #5c0067 0%, #00d4ff 100%);*/
+  /*opacity: 0.3;*/
+}
+
+h1.home {
+  color: white;
+}
+
+h1.home:hover {
+  transition: color .15s ease-in-out,
+    opacity .15s ease-in-out,
+    background .15s ease-in-out,
+    background-color .15s ease-in-out,
+    border-color .15s ease-in-out;
+}
