--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,9 +2,8 @@ doctype html
 html
   head
     meta charset="utf-8"
-    meta name="viewport" content="width=device-width, initial-scale=1.0"
+    meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     meta name="author" content="Kenner Kliemann"
-
 
     title netpri.me
     = csrf_meta_tags
@@ -12,7 +11,18 @@ html
 
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+
+    link href="https://m.media-amazon.com/images/G/01/digital/video/DVUI/favicons/favicon._CB527404570_.png" rel="shortcut icon" type="image/x-icon"
   body
-    .wrapper
-      .container.mb-4
+
+    .container-fluid
+      .notifications
+        - if notice
+          .alert.alert-success.notice = notice
+        - if alert
+          .alert.alert-danger = alert
+      .menu
+        = render 'shared/menu'
+
+      .container
         = yield
