--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,3 +44,21 @@ h1.home:hover {
     background-color .15s ease-in-out,
     border-color .15s ease-in-out;
 }
+
+.animated {
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 2s;
+  /*animation: bounceIn 2s ease-in-out 3s 3 alternate;*/
+}
+
+@keyframes fadeInOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
