--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,28 @@
-<h2>Forgot your password?</h2>
+<div class="container h-100">
+  <div class="row justify-content-center align-items-center h-100">
+    <div class="col-6 mx-auto">
+      <div class="card">
+        <%= form_for(resource, as: resource_name, html: { class: "form-signin" }, url: registration_path(resource_name)) do |f| %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="text-center mb-4">
+            <h2 class="h3 mb-3 font-weight-normal">Esqueceu a sua senha?</h2>
+          </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+
+          <div class="form-group">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.submit "redefinir senha", class: "btn btn-lg btn-outline btn-block btn-outline-dark" %>
+          </div>
+          <div class="form-group">
+            <%= render "devise/shared/links" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
