--- a/app/views/videos/new.html.slim
+++ b/app/views/videos/new.html.slim
@@ -1,1 +1,1 @@
-= render 'form', resource: @resource, url: polymorphic_path([:account, @resource]), method: :post
+= render 'form', resource: @resource, url: polymorphic_path([:account, :videos]), method: :post
