--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,11 +1,11 @@
 <div class="container h-100">
   <div class="row justify-content-center align-items-center h-100">
     <div class="col-6 mx-auto">
-      <div class="card">
+      <div class="card shadow">
         <%= form_for(resource, as: resource_name, html: { class: "form-signin", method: :put }, url: password_path(resource_name)) do |f| %>
 
           <div class="text-center mb-4">
-            <h2 class="h3 mb-3 font-weight-normal">Redefinição de senha</h2>
+            <h2 class="h3 mb-3 font-weight-normal"><%= t('.change_your_password') %></h2>
           </div>
 
           <%= render "devise/shared/error_messages", resource: resource %>
@@ -14,18 +14,18 @@
           <div class="form-group">
             <%= f.label :password %>
             <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
             <% end %>
             <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
           </div>
 
           <div class="form-group">
-            <%= f.label :password_confirmation %><br />
+            <%= f.label :password_confirmation, t('.confirm_new_password') %>
             <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
           </div>
 
           <div class="form-group">
-            <%= f.submit "redefinir senha", class: "btn btn-lg btn-outline btn-block btn-outline-dark" %>
+            <%= f.submit t('.change_my_password'), class: "btn btn-lg btn-outline btn-block btn-outline-dark" %>
           </div>
           <div class="form-group">
             <%= render "devise/shared/links" %>
