--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,11 +1,11 @@
 <div class="container h-100">
   <div class="row justify-content-center align-items-center h-100">
     <div class="col-6 mx-auto">
-      <div class="card">
+      <div class="card shadow">
         <%= form_for(resource, as: resource_name, html: { class: "form-signin" }, url: registration_path(resource_name)) do |f| %>
 
           <div class="text-center mb-4">
-            <h2 class="h3 mb-3 font-weight-normal">Esqueceu a sua senha?</h2>
+            <h2 class="h3 mb-3 font-weight-normal"><%= t('.forgot_your_password') %></h2>
           </div>
 
           <%= render "devise/shared/error_messages", resource: resource %>
@@ -16,7 +16,7 @@
           </div>
 
           <div class="form-group">
-            <%= f.submit "redefinir senha", class: "btn btn-lg btn-outline btn-block btn-outline-dark" %>
+            <%= f.submit t('.send_me_reset_password_instructions'), class: "btn btn-lg btn-outline btn-block btn-outline-dark" %>
           </div>
           <div class="form-group">
             <%= render "devise/shared/links" %>
