--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,15 +1,16 @@
-<div class="card">
+<div class="card shadow-sm">
   <div class="card-body">
     <div class="col-12"></div>
-
-      <h2>Edit <%= resource_name.to_s.humanize %></h2>
-
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "p-4",  method: :put }) do |f| %>
+
+        <div class="text-center mb-4">
+          <h3 class="h3 mb-3 font-weight-normal"><%= t('.title', resource: resource.model_name.human) %></h2>
+        </div>
         <%= render "devise/shared/error_messages", resource: resource %>
 
         <div class="form-group">
           <%= f.label :name %>
-          <%= f.email_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+          <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
         </div>
 
         <div class="form-group">
@@ -18,14 +19,14 @@
         </div>
 
         <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+          <div><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></div>
         <% end %>
 
         <div class="form-group">
-          <%= f.label :password %> <i>(leave blank if you don't want to change it)</i>
+          <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it') %>)</i>
           <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
           <% if @minimum_password_length %>
-            <em class="form-text text-muted"><%= @minimum_password_length %> characters minimum</em>
+            <em class="form-text text-muted"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
           <% end %>
         </div>
 
@@ -35,13 +36,13 @@
         </div>
 
         <div class="form-group">
-          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
+          <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes') %>)</i>
           <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
         </div>
 
         <div class="form-group float-right">
-          <%= link_to "Voltar", :back, class: "btn btn-outline-danger" %>
-          <%= f.submit "Update", class: "btn btn-outline-dark" %>
+          <%= link_to t('devise.shared.links.back'), :back, class: "btn btn-outline-danger" %>
+          <%= f.submit t('.update'), class: "btn btn-outline-dark" %>
         </div>
       <% end %>
     </div>
