--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,18 @@
 <div class="container h-100">
   <div class="row justify-content-center align-items-center h-100">
     <div class="col-6 mx-auto">
-      <div class="card">
+      <div class="card shadow">
         <%= form_for(resource, as: resource_name, html: { class: "form-signin" }, url: registration_path(resource_name)) do |f| %>
 
           <div class="text-center mb-4">
-            <h2 class="h3 mb-3 font-weight-normal">Me cadastrar</h2>
+            <h2 class="h3 mb-3 font-weight-normal"><%= t('.sign_up') %></h2>
           </div>
 
           <%= render "devise/shared/error_messages", resource: resource %>
 
           <div class="form-group">
             <%= f.label :name %><br />
-            <%= f.email_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+            <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
           </div>
 
           <div class="form-group">
@@ -23,7 +23,7 @@
           <div class="form-group">
             <%= f.label :password %>
             <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
             <% end %>
             <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
           </div>
@@ -34,7 +34,7 @@
           </div>
 
           <div class="form-group">
-            <%= f.submit "Começar!", class: "btn btn-lg btn-outline btn-block btn-outline-dark" %>
+            <%= f.submit t('.sign_up'), class: "btn btn-lg btn-outline btn-block btn-outline-dark" %>
           </div>
           <div class="form-group">
             <%= render "devise/shared/links" %>
