--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,6 +4,7 @@ html
     meta charset="utf-8"
     meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     meta name="author" content="Kenner Kliemann"
+    meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"
 
     title netpri.me
     = csrf_meta_tags
